[project]
name = "safeway"
version = "0.1.0"
requires-python = "==3.12.5"
dependencies = [
    "matplotlib==3.10.8",
    "pandas==2.3.3",
    "plotly==6.6.0",
    "streamlit==1.56.0",
    "plotly-express==0.4.1",
    "pydantic==2.13.2",
    "dotenv>=0.9.9",
]

[dependency-groups]
dev = [
    "mypy==1.16.1",
    "ruff==0.12.1",
    "mypy-gitlab-code-quality==1.3.0",
    "pre-commit==4.5.1",
    "pytest-cov==7.1.0",
    "plotly-stubs==0.1.2",
    "pandas-stubs==3.0.0.260204",
    "pytest==9.0.3",
    "dotenv ==0.9.9",
]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
    # docstrings
    "D",
    # others
    "D401",
    "T201",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101","D"]

ignore = [
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
hide_error_codes = false
ignore_missing_imports = false
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = true
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
strict_equality = true
strict_bytes = true
check_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]
package-data = {"src" = ["**/*"]}
source-dir = "src"
